@@ -1,25 +1,59 @@
 package com.aiblogstudio.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
+/**
+ * CORS configuration for the AI Blog Studio backend.
+ * <p>
+ * Supports both local development and production deployment on Render.
+ * The allowed origins can be configured via the CORS_ALLOWED_ORIGINS
+ * environment variable (comma-separated). Falls back to sensible defaults
+ * if not set.
+ */
 @Configuration
 public class CorsConfig {
+
+    @Value("${cors.allowed-origins:http://localhost:3000,http://localhost:5173,http://localhost:60697,https://aiblogstudio.onrender.com}")
+    private String allowedOrigins;
 
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Allow frontend apps (React dev servers) to call this backend
+        // Allow credentials (cookies, authorization headers)
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:60697", "https://aiblogstudio.onrender.com"));
+
+        // Parse allowed origins from environment or use defaults
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        config.setAllowedOrigins(origins);
+
+        // Allow all standard headers
         config.setAllowedHeaders(List.of("*"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+        // Expose Authorization header so frontend can read it
+        config.setExposedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Allow-Origin",
+                "Access-Control-Allow-Credentials"
+        ));
+
+        // Allow all common HTTP methods
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+
+        // Cache preflight response for 1 hour (reduces OPTIONS requests)
+        config.setMaxAge(3600L);
 
         // Apply CORS settings to all API endpoints
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
